[gd_scene load_steps=3 format=3 uid="uid://cott03dqe8ord"]

[ext_resource type="Script" uid="uid://crwnnmeg6ry6" path="res://scenes/ui/reward_button.gd" id="1_y2wrr"]
[ext_resource type="Texture2D" uid="uid://dh8lyqfw6ma3c" path="res://art/sprites/icons/1.png" id="2_y2wrr"]

[node name="RewardButton" type="Button"]
custom_minimum_size = Vector2(0, 28)
offset_right = 75.0
offset_bottom = 14.0
script = ExtResource("1_y2wrr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CustomIcon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("2_y2wrr")
expand_mode = 1
stretch_mode = 3

[node name="CustomText" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "999 gold"
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
